--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	
 		
 	<div class="mk-item">
-	    <a href="/Aria2GUI/about.html" target="_blank" se_prerender_url="complete">
+	    <a href="/Aria2GUI/index.html" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color3">
 	            <div class="item-logo">
 	                <i class="fa fa-download" aria-hidden="true"></i>
