--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	
 	
 	<div class="mk-item">
-	    <a href="/adarkroom/about.html" target="_blank" se_prerender_url="complete">
+	    <a href="/adarkroom/index.html" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color1">
 	            <div class="item-logo">
 	                <i class="fa fa-home" aria-hidden="true"></i>
