--- a/index.html
+++ b/index.html
@@ -148,6 +148,21 @@
 	    <a href="/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color3">
 	            <div class="item-logo">
+	                <i class="fa fa-ofhand-lizard-o" aria-hidden="true"></i>
+	            </div>
+	            <h3>撕衣服</h3>
+	            <p>绅士解压神器</p>
+			 <p><del>撕衣服什么我最喜欢了</del></p>
+	            <i class="light"></i>
+	        </article>
+	    </a>
+	</div>
+	</div>
+		
+	<div class="mk-item">
+	    <a href="/" target="_blank" se_prerender_url="complete">
+	        <article class="mk-color-item color4">
+	            <div class="item-logo">
 	                <i class="fa fa-heart" aria-hidden="true"></i>
 	            </div>
 	            <h3>敬请期待......</h3>
