--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	    </a>
 	</div>
 	<div class="mk-item">
-	    <a href="/" target="_blank" se_prerender_url="complete">
+	    <a href="/syf/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color3">
 	            <div class="item-logo">
 	                <i class="fa fa-ofhand-lizard-o" aria-hidden="true"></i>
