--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 	    <a href="/syf/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color3">
 	            <div class="item-logo">
-	                <i class="fa fa-ofhand-lizard-o" aria-hidden="true"></i>
+	                <i class="fa fa-scissors" aria-hidden="true"></i>
 	            </div>
 	            <h3>撕衣服</h3>
-	            <p>绅士解压神器</p>
-			 <p><del>撕衣服什么我最喜欢了</del></p>
+	            <p>绅士解压神器<del>撕衣服什么我最喜欢了</del></p>
+			 
 	            <i class="light"></i>
 	        </article>
 	    </a>
