--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	            <div class="item-logo">
 	                <i class="fa fa-tree" aria-hidden="true"></i>
 	            </div>
-	            <h3>植物大战僵尸Flash在线版</h3>
+	            <h3>PVZ1Flash在线版</h3>
 	            <p>这是你的童年回忆吗？真巧，也是我的</p>
 	            <i class="light"></i>
 	        </article>
