--- a/index.html
+++ b/index.html
@@ -171,8 +171,20 @@
 	    </a>
 	</div>
 	<div class="mk-item">
-	    <a href="/" target="_blank" se_prerender_url="complete">
+	    <a href="/bingpic/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color3">
+	            <div class="item-logo">
+	                <i class="fa fa-th-large" aria-hidden="true"></i>
+	            </div>
+	            <h3>Bing每日美图</h3>
+	            <p>拥有所有本站API的缺点</p>
+	            <i class="light"></i>
+	        </article>
+	    </a>
+	</div>
+	<div class="mk-item">
+	    <a href="/" target="_blank" se_prerender_url="complete">
+	        <article class="mk-color-item color4">
 	            <div class="item-logo">
 	                <i class="fa fa-heart" aria-hidden="true"></i>
 	            </div>
