--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 	            <div class="item-logo">
 	                <i class="fa fa-th-large" aria-hidden="true"></i>
 	            </div>
-	            <h3>Bing每日美图&它们的故事</h3>
-	            <p>拥有所有本站API的缺点</p>
+	            <h3>Bing每日美图</h3>
+	            <p>以及它们的故事</p>
 	            <i class="light"></i>
 	        </article>
 	    </a>
@@ -200,7 +200,7 @@
 	            <div class="item-logo">
 	                <i class="fa fa-diamond" aria-hidden="true"></i>
 	            </div>
-	            <h3一言</h3>
+	            <h3>一言</h3>
 	            <p>能触动你的心吗？</p>
 	            <i class="light"></i>
 	        </article>
