--- a/index.html
+++ b/index.html
@@ -210,6 +210,18 @@
 	    <a href="/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color6">
 	            <div class="item-logo">
+	                <i class="fa fa-file-sound-o" aria-hidden="true"></i>
+	            </div>
+	            <h3>音频可视化</h3>
+	            <p>3D方式听音乐</p>
+	            <i class="light"></i>
+	        </article>
+	    </a>
+	</div>		    	
+		    <div class="mk-item">
+	    <a href="/" target="_blank" se_prerender_url="complete">
+	        <article class="mk-color-item color1">
+	            <div class="item-logo">
 	                <i class="fa fa-heart" aria-hidden="true"></i>
 	            </div>
 	            <h3>敬请期待......</h3>
