--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 	    </a>
 	</div>
 		    	<div class="mk-item">
-	    <a href="/" target="_blank" se_prerender_url="complete">
+	    <a href="/音频可视化/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color6">
 	            <div class="item-logo">
 	                <i class="fa fa-file-sound-o" aria-hidden="true"></i>
