--- a/PVZ/index.htm
+++ b/PVZ/index.htm
@@ -1,11 +1,39 @@
-﻿
+<!DOCTYPE html>
+<html lang="zh">
 <head>
 <style type="text/css">
 .style1 {
 	text-align: center;
 }
-</style>
-</head>
 
-<div class="style1">
+</style>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Plants vs Zombies</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" /><!--CSS RESET-->
+	<link rel="stylesheet" type="text/css" href="css/htmleaf-demo.css"><!--演示页面样式，使用时可以不引用-->
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<div class="htmleaf-container" id="firefly">
+		
+	</div>
+	
+	<script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
+	<script src='js/jquery.firefly-0.7.min.js'></script>
+	<script type="text/javascript">
+		$.firefly({
+		  color: '#fff',
+		  minPixel: 1,
+		  maxPixel: 3,
+		  total : 65,
+		  on: '#firefly',
+		  borderRadius: 50
+		});
+	</script>
+	<div class="style1">
 	<embed src="pvz_9_15.swf" style="width: 620px; height: 485px"></embed></div>
+</div></div>
+</body>
+</html>
