--- a/bingpic/index.html
+++ b/bingpic/index.html
@@ -377,7 +377,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p>
+<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>-->
 				<a href="#" class="item">
 					<img class="item__image" src="https://pan.cyfan.ga/api/bing/bing.php" alt="item01"/>
 					<h2 class="item__title"><script src="https://pan.cyfan.ga/api/bing/bingc.php"></script></h2>
@@ -435,7 +435,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-	<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+	<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 		</div><!-- /container -->
 		<div id="container-3" class="container">
 			<header class="intro">
@@ -459,7 +459,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-			<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+			<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 				</div><!-- /container -->
 <div id="container-4" class="container">
 			<header class="intro">
@@ -481,7 +481,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-			<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+			<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 				</div><!-- /container -->
 <div id="container-5" class="container">
 			<header class="intro">
@@ -504,7 +504,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-			<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+			<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 				</div><!-- /container -->
 <div id="container-6" class="container">
 			<header class="intro">
@@ -525,7 +525,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-			<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+			<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 				</div><!-- /container -->
 
 <div id="container-7" class="container">
@@ -548,7 +548,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-			<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+			<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 				</div><!-- /container -->
 <div id="container-8" class="container">
 			<header class="intro">
@@ -569,7 +569,7 @@
 					</div>
 				</div><!-- /intro__content -->
 			</header><!-- /intro -->
-<section class="items-wrap"><p>由CYF完成修改，转载一定要保留原先信息！</p></section>
+<section class="items-wrap"><!--<p>由CYF完成修改，转载一定要保留原先信息！</p>--></section>
 		</div><!-- /container -->
 		<script src="js/classie.js"></script>
 		<script>
