--- a/yiyan/index.html
+++ b/yiyan/index.html
@@ -21,7 +21,8 @@ alert("已复制好，可贴粘。");
 </script>
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
-			<h1>一言-能戳动你的心吗？ <span><script src="https://pan.cyfan.ga/api/yiyan/api.php"></script></span></h1>
+			<h2>一言-能戳动你的心吗？ </h2>
+				</h1><script src="https://pan.cyfan.ga/api/yiyan/api.php"></script></h1>
 			<p>接口：https://pan.cyfan.ga/api/yiyan/api.php ,格式：document.write</p>
 		</header>
 		<div class="waveWrapper waveAnimation">
