--- a/yiyan/index.html
+++ b/yiyan/index.html
@@ -22,7 +22,7 @@ alert("已复制好，可贴粘。");
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
 			<h2>一言-能戳动你的心吗？ </h2>
-				</h1><script src="https://pan.cyfan.ga/api/yiyan/api.php"></script></h1>
+				<h1><script src="https://pan.cyfan.ga/api/yiyan/api.php"></script></h1>
 			<p>接口：https://pan.cyfan.ga/api/yiyan/api.php ,格式：document.write</p>
 		</header>
 		<div class="waveWrapper waveAnimation">
