--- a/404.html
+++ b/404.html
@@ -1,37 +1,64 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-<style type="text/css">
-.style1 {
-	text-align: center;
-}
-.style2 {
-	font-size: large;
-	font-family: "等线 Light";
-}
-.style3 {
-	text-align: center;
-	font-family: "微软雅黑 Light";
-	font-size: x-large;
-}
-a {
-	color: #000000;
-}
-a:visited {
-	color: #000000;
-}
-a:active {
-	color: #000000;
-}
-a:hover {
-	color: #000000;
-}
-</style>
-<title>404|没有东西呢┭┮﹏┭┮</title>
-</head>
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<title>404 - 诶呀找不到了</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" /><!--CSS RESET-->
+	<style>
+		#input {
+		  position: absolute;
+		  bottom: 10px;
+		  left: 50%;
+		  width: 8em;
+		  max-width: 80%;
+		  background: none;
+		  border: none;
+		  outline: none;
+		  border-bottom: 2px solid #fff;
+		  color: #fff;
+		  font-size: 3em;
+		  text-align: center;
+		  z-index: 999;
+		  opacity: .25;
+		  -webkit-transform: translateX(-50%);
+		          transform: translateX(-50%);
+		  transition: opacity .3s;
+		}
+		#input:hover, #input:focus {
+		  opacity: 1;
+		}
 
-<p class="style1">&nbsp;</p>
-<p class="style1"><img alt="404" src="/404.jpg" width="215" height="200"><span class="style2">对不起对不起对不起！/(ㄒoㄒ)/~~</span></p>
-<p class="style3">这里没有你想要的东西。要不，5秒后回<a href="/">主页</a>？</p>
-<meta http-equiv="refresh" content="5;url=/">
+		body {
+		  position: fixed;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		  margin: 0;
+		  padding: 0;
+		  -webkit-user-select: none;
+		     -moz-user-select: none;
+		      -ms-user-select: none;
+		          user-select: none;
+		}
+	</style>
+</head>
+<body>
+	<div class="htmleaf-container">
+		<header class="htmleaf-header">
+
+			
+		</header>
+		<div class="htmleaf-content">
+
+<p id="input">诶呀找不到了，还是回<a href="/">主页</a>吧....</p>
+		</div>
+	</div>
+	
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script>
+	<script  src="./js/script.js"></script>
+	<meta http-equiv="refresh" content="5;url=/">
+</body>
 </html>
