--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
 	</div>
 	
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'></script>
-	<script  src="./js/script.js"></script>
+	<script  src="js/script.js"></script>
 	<meta http-equiv="refresh" content="5;url=/">
 </body>
 </html>
