--- a/clock/index.html
+++ b/clock/index.html
@@ -9,7 +9,7 @@
 		<link href="assets/css/style.css" rel="stylesheet" />
 
 		<!--[if lt IE 9]>
-			<script src="http://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script>
+			<script src="https://libs.useso.com/js/html5shiv/3.7/html5shiv.min.js"></script>
 		<![endif]-->
 	</head>
 
@@ -84,7 +84,7 @@
         
 		<!-- JavaScript Includes -->
 		<script src="assets/js/jquery-1.11.0.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
 		<script src="assets/js/script.js"></script>
 		
 
