--- a/bingpic/index.html
+++ b/bingpic/index.html
@@ -1,13 +1,13 @@
 <script language="javascript">
             if (window.screen)
             {
-                var m_height=screen.height;
+                var m_height=screen.weight;
                 m="m/";
                 d="d.html";
-                if (m_height<600) {
+                if (m_height<800) {
                     self.location.replace(m);
                 }
-                if (m_height >= 600)
+                if (m_height >= 800)
                 {
                     self.location.replace(d);
                 }
