--- a/bingpic/index.html
+++ b/bingpic/index.html
@@ -4,11 +4,10 @@
                 var m_height=screen.weight;
                 m="m/";
                 d="d.html";
-                if (m_height < 800) {
-                    self.location.replace(m);
-                }
-                if (m_height >= 800)
-                {
+                if (m_height >= 800) {
+                    self.location.replace(c);
+                        }
+                        else{
                     self.location.replace(d);
                 }
             }
