--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]--> 
     
     <!-- font-awesome 图标字体 -->
-   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
+   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
     <!-- 实验室核心样式文件 -->
     <link rel="stylesheet" href="css/index.css">
 
@@ -261,7 +261,7 @@
 	            <div class="item-logo">
 	                <i class="fa fa-text-width" aria-hidden="true"></i>
 	            </div>
-	            <h3>MarkDown编辑器Pro</h3>
+	            <h3>MarkDown编辑器+</h3>
 	            <p>PS:支持运行JS和HTML代码</p>
 	            <i class="light"></i>
 	        </article>
