--- a/bingpic/m/index.html
+++ b/bingpic/m/index.html
@@ -31,7 +31,7 @@
             <h2 class="el__heading">今日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.ga/api/bing/bingc.php"></script></div>
+            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/bingc.php"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -53,7 +53,7 @@
             <h2 class="el__heading">昨日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.ga/api/bing/2c.php"></script></div>
+            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/2c.php"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -75,7 +75,7 @@
             <h2 class="el__heading">前日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.ga/api/bing/3c.php"></script></div>
+            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/3c.php"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -97,7 +97,7 @@
             <h2 class="el__heading">四日前</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.ga/api/bing/4c.php"></script></div>
+            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/4c.php"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             <h2 class="el__heading">五日前</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.ga/api/bing/5c.php"></script></div>
+            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/5c.php"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
