--- a/adarkroom/index.html
+++ b/adarkroom/index.html
@@ -38,7 +38,7 @@ a:hover {
 <p class="style3">注意</p>
 <p class="style4">人生游戏，小心沉迷！</p>
 <p class="style4">手机可能无法玩耍，请前往Appstore或GoogleStore下载付费正版或下载免费盗版“1DarkRoom”</p>
-<p class="style4">当你看到这里，你应该被转入程序中，如果没有<a href="https://adr.cyfan.ga">>>点此</a>
+<p class="style4">当你看到这里，你应该被转入程序中，如果没有<a href="https://adr.cyfan.top">>>点此</a>
 <meta http-equiv="refresh" content="4;url= https://adr.cyfan.ga">
 <!--
 </body>
