--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]--> 
     
     <!-- font-awesome 图标字体 -->
-   <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
     <!-- 实验室核心样式文件 -->
     <link rel="stylesheet" href="css/index.css">
 
