--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
 
 <div class="mk-item-box">
      <!-- mk-item -->
-
+<div class="mk-item">
+	    <a href="/API&TOS/" target="_blank" se_prerender_url="complete">
+	        <article class="mk-color-item color6">
+	            <div class="item-logo">
+	                <i class="fa fa-binoculars" aria-hidden="true"></i>
+	            </div>
+	            <h3>API&TOS</h3>
+	            <p>本站所有API调用方式与许可</p>
+	            <i class="light"></i>
+	        </article>
+	    </a>
+	</div>
+	
 	<div class="mk-item">
 	    <a href="/picbed/about.html" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color1">
