--- a/tbt/index.html
+++ b/tbt/index.html
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-	background-color: #68217A;
+	background-color: #000000;
 	margin: 0;
 	font-family: Helvetica, sans-serif;;
 	overflow: hidden;
