--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 	    <a href="/abtt/b2a.html" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color6">
 	            <div class="item-logo">
-	                <i class="fa fa-heart" aria-hidden="true"></i>
+	                <i class="fa fa-inbox" aria-hidden="true"></i>
 	            </div>
 	            <h3>B2A</h3>
 	            <p>Give me AV back!</p>
