--- a/vipvideo/index.html
+++ b/vipvideo/index.html
@@ -63,12 +63,12 @@
      <div class="input-group" style="width: 100%;">
       <span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
       <select class="form-control input-lg" id="jk">
-      	<option value="http://jx.du2.cc/?url=" selected="">6</option> 
-      	<option value="http://jx.598110.com/?url=" selected="">5</option>
-	  <option value="http://jx.618ge.com/?url=" selected="">4</option>
-    <option value="http://vip.jlsprh.com/?url=" selected="">3</option>
-	<option value="http://jx.drgxj.com/?url=" selected="">2</option> 
-      <option value="http://jx.598110.com/?url=" selected="">1</option> 
+      	<option value="https://jx.du2.cc/?url=" selected="">6</option> 
+      	<option value="https://jx.598110.com/?url=" selected="">5</option>
+	  <option value="https://jx.618ge.com/?url=" selected="">4</option>
+    <option value="https://vip.jlsprh.com/?url=" selected="">3</option>
+	<option value="https://jx.drgxj.com/?url=" selected="">2</option> 
+      <option value="https://jx.598110.com/?url=" selected="">1</option> 
 	  
   </select>
 	
@@ -136,6 +136,17 @@
         <a class="btn2 btn-outline2" href="https://www.youku.com/" rel="nofollow" target="_blank">进入优酷视频</a>
 		    <a class="btn2 btn-outline2" href="https://tv.sohu.com/" rel="nofollow" target="_blank">进入搜狐视频</a>
 		    <a class="btn2 btn-outline2" href="http://www.pptv.com/" rel="nofollow" target="_blank">进入pptv视频</a>
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ADs-in-Blog-Under-Valine -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1878991317600808"
+     data-ad-slot="6517667779"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </div>
 
    <br>
@@ -165,7 +176,17 @@
         <li>第&nbsp;一&nbsp;步&nbsp;进入各大视频网站，找到想要观看的VIP视频vip会员，然后复制链接（浏览器上的视频地址）</li>
         <li>第&nbsp;二&nbsp;步&nbsp;将复制的链接粘贴到本站播放地址，并点击开始解析</li>
         <li>第&nbsp;三&nbsp;步&nbsp;等待解析完成，即可免费观看VIP视频vip会员</li>
-       
+       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- ADS-IN-Tools -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1878991317600808"
+     data-ad-slot="7951945047"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 </ul>
 
