--- a/index.html
+++ b/index.html
@@ -349,6 +349,18 @@
 	    <a href="/" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color4">
 	            <div class="item-logo">
+	                <i class="fa fa-magic" aria-hidden="true"></i>
+	            </div>
+	            <h3>Pixiv观看</h3>
+	            <p>Pixiv国内能打开吗QAQ</p>
+	            <i class="light"></i>
+	        </article>
+	    </a>
+	</div>
+		    <div class="mk-item">
+	    <a href="/" target="_blank" se_prerender_url="complete">
+	        <article class="mk-color-item color5">
+	            <div class="item-logo">
 	                <i class="fa fa-heart" aria-hidden="true"></i>
 	            </div>
 	            <h3>敬请期待......</h3>
