--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 	</div>
 		    
 		    <div class="mk-item">
-	    <a href="/" target="_blank" se_prerender_url="complete">
+	    <a href="https://pixiv.cyfan.top" target="_blank" se_prerender_url="complete">
 	        <article class="mk-color-item color4">
 	            <div class="item-logo">
 	                <i class="fa fa-magic" aria-hidden="true"></i>
