--- a/PVZ/index.html
+++ b/PVZ/index.html
@@ -18,7 +18,7 @@
 <body>
 	<div class="htmleaf-container" id="firefly">
 			<div class="style1">
-	<embed src="https://cdn.jsdelivr.net/gh/chenyfan/CDN@master/assets/PVZ/pvz_9_15.swf" style="width: 620px; height: 485px"></embed></div>
+	<embed src="pvz_9_15.swf" style="width: 620px; height: 485px"></embed></div>
 
 	</div>
 	
