--- a/markdownpreview/index.min.html
+++ b/markdownpreview/index.min.html
@@ -1,1 +1,1 @@
-<script src="https://cdn.jsdelivr.net/npm/jquery"></script><div id="l" class="l"></div><script>$(function(){$("#l").load("https://cdn.jsdelivr.net/gh/chenyfan/tools/markdownpreview/index.html");})</script>
+<script src="https://cdn.jsdelivr.net/npm/jquery"></script><div id="l" class="l"></div><script src="https://cdn.jsdelivr.net/gh/chenyfan/cdn/js/md.js"></script>
