--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
 	            <div class="item-logo">
 	                <i class="fa fa-pencil-square" aria-hidden="true"></i>
 	            </div>
-	            <h3><del>PhotoShop</del></h3>
-	            <p>糟糕，这个工具似乎已经下线了</p>
+	            <h3>PhotoShop</h3>
+	            <p>恐怖如斯的在线修图</p>
 	            <i class="light"></i>
 	        </article>
 	    </a>
