--- a/bingpic/m/index.html
+++ b/bingpic/m/index.html
@@ -29,7 +29,7 @@
             <h2 class="el__heading">今日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/bingc.php"></script></div>
+            <div class="el__text"><script src="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/DailyGet@gh-pages/bingpic/bing.js"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -51,7 +51,7 @@
             <h2 class="el__heading">昨日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/2c.php"></script></div>
+            <div class="el__text"><script src="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/DailyGet@gh-pages/bingpic/2.js"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <h2 class="el__heading">前日</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/3c.php"></script></div>
+            <div class="el__text"><script src="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/DailyGet@gh-pages/bingpic/3.js"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -95,7 +95,7 @@
             <h2 class="el__heading">四日前</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/4c.php"></script></div>
+            <div class="el__text"><script src="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/DailyGet@gh-pages/bingpic/4.js"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
@@ -117,7 +117,7 @@
             <h2 class="el__heading">五日前</h2>
           </div>
           <div class="el__content">
-            <div class="el__text"><script src="https://pan.cyfan.top/api/bing/5c.php"></script></div>
+            <div class="el__text"><script src="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/DailyGet@gh-pages/bingpic/5.js"></script></div>
             <div class="el__close-btn"></div>
           </div>
         </div>
