--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/logo.svg" color="#222">
 <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/npm/cyf/css/animate.min.css'>
 <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/gh/driftyco/ionicons@2.0.0/css/ionicons.min.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/cyf@0.0.2/css/app.css'>
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/cyf@0.0.2/css/app.css'>
 </head>
 <body>
 <div class="back1">
