--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/favicon-32x32-next.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/favicon-16x16-next.png">
 <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/logo.svg" color="#222">
-<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/npm/cyf/css/animate.min.css'>
-<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/gh/driftyco/ionicons@2.0.0/css/ionicons.min.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/cyf@0.0.2/css/app.css'>
+<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/combine/npm/cyf/css/animate.min.css,gh/driftyco/ionicons@2.0.0/css/ionicons.min.css,npm/cyf@0.0.2/css/app.min.css'>
 </head>
 <body>
 <div class="back1">
@@ -253,7 +251,6 @@ var a2 = 99;
 
  });
  </script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cyf/js/app.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cyf/js/patternLock.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/combine/npm/cyf/js/patternLock.min.js,gh/ChenYFan/CDN@master/js/tools.cyfan.top.js,npm/cyf/js/app.min.js"></script>
 </body>
 </html>
