--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <meta name="description" content="TOOLS.cyfan.top">
 <meta name="keywords" content="在线工具">
 <title>陈YF的工具箱</title>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cyf/css/default.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cyf@0.0.2/css/default.css">
 <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/apple-touch-icon-next.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/favicon-32x32-next.png">
 <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/favicon-16x16-next.png">
 <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/ChenYFan/tools@ce52ac4180e4d4be994ea3525a513be0181c8e27/images/logo.svg" color="#222">
-<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/npm/cyf/css/animate.min.css'>
+<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/npm/cyf@0.0.2/css/animate.min.css'>
 <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/gh/driftyco/ionicons@2.0.0/css/ionicons.min.css'>
  <link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/npm/cyf@0.0.2/css/app.min.css'>
  </head>
@@ -48,145 +48,145 @@
 <div class="mhn-ui-row mhn-ui-apps">
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-open="page-author">
-<span data-color="#2980b9"><img src="https://cdn.jsdelivr.net/npm/cyf/img/6.png" style="width: 55px;"></span>
+<span data-color="#2980b9"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/6.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">作者信息</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-href="https://picbed.cyfan.top">
-<span data-color="#8e44ad"><img src="https://cdn.jsdelivr.net/npm/cyf/img/2.png" style="width: 55px;"></span>
+<span data-color="#8e44ad"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/2.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">公益图床</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://tester.cyfan.top/MagicMusic/">
-<span data-color="#f39c12"><img src="https://cdn.jsdelivr.net/npm/cyf/img/3.png" style="width: 55px;"></span>
+<span data-color="#f39c12"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/3.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">免费音乐</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://adr.cyfan.top/">
-<span data-color="#16a085"><img src="https://cdn.jsdelivr.net/npm/cyf/img/4.png" style="width: 55px;"></span>
+<span data-color="#16a085"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/4.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">A Dark Room</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="/Aria2NG/">
-<span data-color="#1e1e1e"><img src="https://cdn.jsdelivr.net/npm/cyf/img/7.png" style="width: 55px;"></span>
+<span data-color="#1e1e1e"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/7.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">Aria2NG</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/td/">
-<span data-color="#3b5998"><img src="https://cdn.jsdelivr.net/npm/cyf/img/9.png" style="width: 55px;"></span>
+<span data-color="#3b5998"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/9.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">塔防</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/vipvideo/">
-<span data-color="#56a3d9"><img src="https://cdn.jsdelivr.net/npm/cyf/img/10.png" style="width: 55px;"></span>
+<span data-color="#56a3d9"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/10.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">解锁VIP视频</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/syf/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/11.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/11.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">撕衣服</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/PVZ/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/8.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/8.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">PVZ</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/bingpic/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/12.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/12.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">Bing美图</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/djt/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/13.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/13.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">毒鸡汤</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/yiyan/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/14.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/14.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">一言</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/%E9%9F%B3%E9%A2%91%E5%8F%AF%E8%A7%86%E5%8C%96/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/15.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/15.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">音乐可视化</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/clock/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/16.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/16.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">电子钟</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/tbt/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/17.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/17.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">3D元素周期表</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://ps.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/18.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/18.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">PhotoShop</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://md.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/19.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/19.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">MD编辑器</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/mikutap/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/20.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/20.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">MikuTap</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-href="https://tools.cyfan.top/abtt/b2a.html">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/21.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/21.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">B2A</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-href="https://gh-proxy.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/22.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/22.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">GithubGo</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://pixiv.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/24.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/24.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">大陆版本pixiv</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="social">
 <div class="mhn-ui-icon" data-href="https://magictiles.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/23.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/23.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">钢琴块</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="credits">
 <div class="mhn-ui-icon" data-href="https://ipfs.cyfan.top/">
-<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf/img/1.png" style="width: 55px;"></span>
+<span data-color="#ec4a89"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/1.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">无限网盘</div>
 </div>
 </div>
 <div class="mhn-ui-col" data-filter="general">
 <div class="mhn-ui-icon" data-open="page-credits">
-<span data-color="#2980b9"><img src="https://cdn.jsdelivr.net/npm/cyf/img/25.png" style="width: 55px;"></span>
+<span data-color="#2980b9"><img src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/img/25.png" style="width: 55px;"></span>
 <div class="mhn-ui-icon-title">外链工具</div>
 </div>
 </div>
@@ -242,7 +242,7 @@
 </div>
 </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/cyf/js/jquery-2.1.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/cyf@0.0.2/js/jquery-2.1.1.min.js"></script>
 <script>
 $(document).ready(function(){
 
@@ -253,6 +253,6 @@ var a2 = 99;
 
  });
  </script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/combine/npm/cyf/js/patternLock.min.js,gh/ChenYFan/CDN@master/js/tools.cyfan.top.js,npm/cyf/js/app.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/combine/npm/cyf@0.0.2/js/patternLock.min.js,gh/ChenYFan/CDN@master/js/tools.cyfan.top.js,npm/cyf@0.0.2/js/app.min.js"></script>
 </body>
 </html>
